--- a/NotaGastos-portlet/build.xml
+++ b/NotaGastos-portlet/build.xml
@@ -2,5 +2,6 @@
 <!DOCTYPE project>
 
 <project name="NotaGastos-portlet" basedir="." default="deploy">
-	<import file="../build-common-portlet.xml" />
+	<property name="project.dir" value="${sdk.home}" />
+	<import file="${project.dir}/portlets/build-common-portlet.xml" />
 </project>
