--- a/Portal-hook/build.xml
+++ b/Portal-hook/build.xml
@@ -2,5 +2,6 @@
 <!DOCTYPE project>
 
 <project name="Portal-hook" basedir="." default="deploy">
-	<import file="../build-common-hook.xml" />
+	<property name="project.dir" value="${sdk.home}" />
+	<import file="${project.dir}/hooks/build-common-hook.xml" />
 </project>
